--- a/public/page.html
+++ b/public/page.html
@@ -1,7 +1,40 @@
-<img src="https://i.ibb.co/Hd9cHDq/tenor.gif" alt="https://i.ibb.co/Hd9cHDq/tenor.gif" class="transparent">
-<script>
-    // This function will close the tab when the page is opened
-    window.onload = function() {
-      window.close();
-    };
-  </script>
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="refresh" content="0; url=https://www.google.com">
+<link rel="canonical" href="https://i.ibb.co/Hd9cHDq/tenor.gif" />
+<meta property="og:url" content="https://i.ibb.co/Hd9cHDq/tenor.gif">
+<meta property="og:video" content="https://i.ibb.co/Hd9cHDq/tenor.gif" />
+<meta property="og:video:secure_url" content="https://i.ibb.co/Hd9cHDq/tenor.gif">
+<meta property="og:video:width" content="896" />
+<meta property="og:video:height" content="504" />
+<meta property="og:video:type" content="video/mp4" />
+<meta property="og:type" content="video.other">
+<meta property="og:image" content="https://i.ibb.co/Hd9cHDq/tenor.gif">
+<meta name="twitter:domain" content="tryitands.ee">
+<meta name="twitter:card" content="player" />
+<meta name="twitter:image" content="https://i.ibb.co/Hd9cHDq/tenor.gif">
+<meta name="twitter:player" content="https://i.ibb.co/Hd9cHDq/tenor.gif" />
+<meta name="twitter:player:width" content="896" />
+<meta name="twitter:player:height" content="504" />
+<meta name="twitter:player:stream" content="https://i.ibb.co/Hd9cHDq/tenor.gif" />
+<meta name="twitter:player:stream:content_type" content="video/mp4" />
+<meta property="title" content="0">
+</head>
+<body>
+<style type="text/css">
+			*, body, html, video, source {
+				margin: 0;
+				padding: 0;
+			}
+			video {
+				width:100%;
+				height:auto;
+			}
+
+		</style>
+<video width="100%" controls autoplay>
+<source src="https://i.ibb.co/Hd9cHDq/tenor.gif" type="video/mp4">
+</video>
+</body>
+</html>
